--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Ignore bundler config
 /.bundle
 
-# Ignore the default SQLite database.
+# Ignore the default SQLite database and anything else.
 /db/*.sqlite3
 
 # Ignore all logfiles and tempfiles.
